Fix too large navbar text padding

--- a/rogue-thi-app/styles/AppNavbar.module.css
+++ b/rogue-thi-app/styles/AppNavbar.module.css
@@ -27,7 +27,7 @@
 }
 
 .titleText:first-child {
-  padding: 0px 20px;
+  padding: 0px 10px;
 }
 
 .right {
